--- a/code/rev1/ui/window.ui
+++ b/code/rev1/ui/window.ui
@@ -6,6 +6,7 @@
     <property name="default-height">400</property>
     <child>
       <object class="GtkBox">
+        <property name="spacing">10</property>
         <property name="orientation">GTK_ORIENTATION_VERTICAL</property>
         <child>
           <object class="GtkBox">
